--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
@@ -11,19 +11,26 @@ android {
         dataBinding true
     }
 
+
     defaultConfig {
-        applicationId "com.homebase.codechallenge"
         minSdk 21
         targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
-        release {
+        debug {
+            buildConfigField "String", "BASE_API_HOST_URL", "\"https://jsonkeeper.com/\""
             minifyEnabled false
+        }
+
+        release {
+            buildConfigField "String", "BASE_API_HOST_URL", "\"https://jsonkeeper.com/\""
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -38,22 +45,16 @@ android {
 
 dependencies {
 
-    //Internal modules
-    implementation project(':core')
-
-    //Application
-    implementation("androidx.multidex:multidex:2.0.1")
-
-    //Project
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.jakewharton.timber:timber:5.0.1'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
-    //Test
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
