--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.airbnb.android:lottie:4.2.2'
 
     //Test
     testImplementation 'junit:junit:4.+'
